--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "rsmc"
 version = "0.1.1"
-edition = "2021"
-rust-version = "1.83.0"
+edition = "2024"
+rust-version = "1.85.0"
 
 [profile.dev.package.objc2]
 debug-assertions = false
@@ -29,6 +29,7 @@ renet_visualizer = { git = "https://github.com/CuddlyBunion341/renet.git", featu
   "bevy",
 ] }
 egui_plot = "0.30.0"
+genawaiter = "0.99.1"
 
 [profile.dev.package."*"]
 opt-level = 3
