--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ egui_plot = "0.30.0"
 [profile.dev.package."*"]
 opt-level = 3
 
+[profile.dev.package.objc2]
+debug-assertions = false
+
 [profile.release]
 opt-level = 3
 
