--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ rust-version = "1.90.0"
 
 [dependencies]
 bevy = "0.16.1"
-bevy_fps_controller = "16.1.0"
-bevy_rapier3d = "0.28.0"
+bevy_fps_controller = {version = "16.1.0", features = ["rapier"]}
+bevy_rapier3d = "0.30.0"
 cgmath = "0.18.0"
 iyes_perf_ui = "0.5.0"
 noise = "0.9.0"
@@ -19,8 +19,10 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde-big-array = "0.5.1"
 chrono = "0.4.38"
 rayon = "1.10.0"
-bevy_flair = "0.1.0"
-bevy-inspector-egui = "0.33"
+bevy_flair = "0.4.0"
+bevy_egui = "0.36.0"
+bevy_diagnostic = "0.16.1"
+bevy-inspector-egui = {version = "0.33", features = ["bevy_render"]}
 renet_visualizer = "1.0.0"
 egui_plot = "0.30.0"
 
