--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ rust-version = "1.90.0"
 [dependencies]
 bevy = "0.16.1"
 bevy_fps_controller = {version = "16.1.0", features = ["rapier"]}
-bevy_rapier3d = {version ="0.30.0", features = ["simd-stable", "debug-render-3d", "dim3"]}
+bevy_rapier3d = {version ="0.31"}
 cgmath = "0.18.0"
 iyes_perf_ui = "0.5.0"
 noise = "0.9.0"
