--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bevy = "0.17.3"
 bevy_asset = "0.17.3"
 bevy_camera = "0.17.3"
 bevy_mesh = "0.17.3"
+bevy_dev_tools = "0.17.3"
 bevy_fps_controller = {version = "17.1.0", features = ["rapier"]}
 bevy_rapier3d = {version ="0.32"}
 bevy_flair = "0.6.0"
