Optimize suboptimal code (only a little)

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,4 +4,6 @@ BEVY_ASSET_ROOT = "."
 [alias]
 rc = 'run --bin client'
 rs = 'run --bin server'
+tc = 'run --bin client --features bevy/trace_tracy'
+ts = 'run --bin server --features bevy/trace_tracy'
 t = 'test'
