Introduce Chunk Transfer and Processing Limits (#67)
* Very ugly first server-side implementation

* Optimize suboptimal code (only a little)

* Improvements

* Improvements

* HARDCODE spawnpoint

* Add position sorting

* Fix linter

* Apply suggestion from @cb341

* Apply suggestions from code review

* Lint

* Stuff

* Fix silly off by one err

* Improvements

* Increase client side batch size

* Refactor

* Refactor

* Fix CI

* Renamings

* Lint

* Apply suggestions from code review

* Cleanup

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,4 +4,5 @@ BEVY_ASSET_ROOT = "."
 [alias]
 rc = 'run --bin client'
 rs = 'run --bin server'
-t = 'test'
+tc = 'run --bin client --features bevy/trace_tracy'
+ts = 'run --bin server --features bevy/trace_tracy'
