--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ bincode = "1.3.3"
 rand = {version = "0.9.0", features = ["small_rng"]}
 renet = "1.2.0"
 serde = { version = "1.0.203", features = ["derive"] }
+serde_derive = "1.0.228"
+serde_json = "1.0.149"
 serde-big-array = "0.5.1"
 chrono = "0.4.38"
 rayon = "1.10.0"
