--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ serde_json = "1.0.149"
 serde-big-array = "0.5.1"
 chrono = "0.4.38"
 rayon = "1.10.0"
+clap = { version = "4.5.54", features = ["derive"] }
 
 [patch.crates-io]
 # TODO: Remove patch once egui requirement is more flexible.
