--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde-big-array = "0.5.1"
 chrono = "0.4.38"
 rayon = "1.10.0"
+clap = { version = "4.5.54", features = ["derive"] }
 
 [patch.crates-io]
 # TODO: Remove patch once egui requirement is more flexible.
@@ -43,9 +44,6 @@ renet = {git = "https://github.com/cb341/renet.git" }
 
 [profile.dev.package."*"]
 opt-level = 3
-
-[profile.dev.package.objc2]
-debug-assertions = false
 
 [profile.release]
 opt-level = 3
